Images and image resolver class

--- a/webApp/appsettings.json
+++ b/webApp/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection":"Data source=skinet.db" 
-  }
+    "DefaultConnection": "Data source=skinet.db"
+  },
+  //add image url in front of images
+  "ApiUrl": "https://localhost:44310/"
 }
