--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,6 +18,8 @@
     ]
   },
   "angularCompilerOptions": {
+    "strictTemplate":true,
+    "strictDomEventTypes":false,
     "enableI18nLegacyMessageIdFormat": false
   }
 }
